<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="50px">


    <TextView
        android:id="@+id/TVnome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nome"
        android:textSize="24sp" />


    <EditText
        android:id="@+id/edtNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nome"
        android:layout_marginTop="24sp"/>

    <TextView
        android:id="@+id/tvIdade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/anoNascimento"
        android:textSize="24sp"
        android:layout_marginTop="24sp"/>


    <EditText
        android:id="@+id/edtanoNascimento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/anoNascimento"
        android:layout_marginTop="24sp" />


    <Button
        android:id="@+id/btnenviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enviar"
        android:textStyle="bold"
        android:textSize="24sp"
        android:layout_gravity="center"
        android:layout_marginTop="24sp"/>


</LinearLayout>